Fix favourite alignment for Chrome

--- a/frontend/styles/topic.styl
+++ b/frontend/styles/topic.styl
@@ -95,6 +95,8 @@
         border-color #333
   .topic-tags-edit
     margin-left 20px
+    a
+      text-decoration-style dotted
   .topic-tags-user
     a
       color #139643
@@ -122,6 +124,14 @@
 li
   &.topic-info-date
     color #7b848d
+  &.topic-info-favourite
+    white-space nowrap
+    .favourite
+      color #999
+      display inline
+      cursor pointer
+      text-decoration underline
+      text-decoration-style dotted
   &.topic-info-comments
     a
       color #727fa0
